--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HotPocket Example</title>
+    <title>HotPocket</title>
     <link rel="stylesheet" href="style.css">
     <script src="hotpocket.js"></script>
   </head>
   <body>
+
+    <h1>HotPocket World</h1>
+
     <script src="script.js"></script>
   </body>
 </html>
